# cashewiss

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml
cashewiss/: __init__.py  cli.py
cashewiss/core/: __init__.py  base.py  categories.py  client.py  enums.py  models.py
cashewiss/processors/: __init__.py  migros.py  swisscard.py  viseca.py  zkb.py
cashewiss/streamlit/: app.py
examples/: process_migros.py  process_swisscard.py  process_viseca.py  process_zkb.py
